--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -137,3 +137,83 @@ Use 0 or a negative value to fallback to the encoder default. Defaults to 0.
 cameraView.setVideoBitRate(0);
 cameraView.setVideoBitRate(4000000);
 ```
+
+### Manual Focus
+
+There are many ways to focus a CameraView engine:
+
+- Continuous autofocus is activated by default, where present
+- User can start focus with a [Gesture](gestures.html)
+- The developer can start focus with the `startAutoFocus(float, float)` API. This action needs
+  the coordinates of a point to focus, with respect to the view width and height.
+
+The last two actions will trigger the focus callbacks:
+
+```java
+cameraView.addCameraListener(new CameraListener() {
+    
+    @Override
+    public void onFocusStart(@NonNull PointF point) {
+        // Auto focus was started by a gesture or by startAutoFocus(float, float).
+        // The camera is currently trying to focus around that area.
+        // This can be used to draw things on screen.
+    }
+
+    @Override
+    public void onFocusEnd(boolean successful, @NonNull PointF point) {
+        // Auto focus operation just ended. If successful, the camera will have converged
+        // to a new focus point, and possibly changed exposure and white balance as well.
+        // The point is the same that was passed to onFocusStart.
+    }
+});
+```
+
+Auto focus is not guaranteed to be supported: check the `CameraOptions` to be sure.
+
+### Zoom
+
+There are two ways to control the zoom value:
+
+- User can zoom in or out with a [Gesture](gestures.html)
+- The developer can start manual zoom with the `setZoom(float)` API, passing in a value between 0 and 1.
+
+Both actions will trigger the zoom callback, which can be used, for example, to draw a seek bar:
+
+```java
+cameraView.addCameraListener(new CameraListener() {
+    
+    @Override
+    public void onZoomChanged(float newValue, @NonNull float[] bounds, @Nullable PointF[] fingers) {
+        // newValue: the new zoom value
+        // bounds: this is always [0, 1]
+        // fingers: if caused by touch gestures, these is the fingers position
+    }
+});
+```
+
+Zoom is not guaranteed to be supported: check the `CameraOptions` to be sure.
+
+### Exposure correction
+
+There are two ways to control the exposure correction value:
+
+- User can change the exposure correction with a [Gesture](gestures.html)
+- The developer can change this value with the `setExposureCorrection(float)` API, passing in the EV
+  value, in camera stops. This value should be contained in the minimum and maximum supported values,
+  as returned by `CameraOptions`.
+
+Both actions will trigger the exposure correction callback, which can be used, for example, to draw a seek bar:
+
+```java
+cameraView.addCameraListener(new CameraListener() {
+    
+    @UiThread
+    public void onExposureCorrectionChanged(float newValue, @NonNull float[] bounds, @Nullable PointF[] fingers) {
+        // newValue: the new correction value
+        // bounds: min and max bounds for newValue, as returned by {@link CameraOptions}
+        // fingers: finger positions that caused the event, null if not caused by touch
+    }
+});
+```
+
+EV correction is not guaranteed to be supported: check the `CameraOptions` to be sure.
