--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -5,6 +5,7 @@ subtitle: "Output parameters and capture options"
 category: docs
 order: 2
 date: 2018-12-20 21:08:53
+disqus: 1
 ---
 
 CameraView supports a wide range of controls that will control the behavior of the sensor or the
