--- a/docs/_posts/2018-12-20-gestures.md
+++ b/docs/_posts/2018-12-20-gestures.md
@@ -5,6 +5,7 @@ subtitle: "Gestures control"
 category: docs
 order: 4
 date: 2018-12-20 20:49:35
+disqus: 1
 ---
 
 `CameraView` listen to lots of different gestures inside its bounds. You have the chance to map
