--- a/docs/_posts/2018-12-20-previews.md
+++ b/docs/_posts/2018-12-20-previews.md
@@ -5,6 +5,7 @@ subtitle: "Camera preview implementations"
 category: docs
 order: 6
 date: 2018-12-20 21:58:16
+disqus: 1
 ---
 
 CameraView supports different types of previews, configurable either through the `cameraPreview` 
