Add seo tag plugin

--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -2,6 +2,7 @@
 layout: page
 title: "Controls"
 subtitle: "Output parameters and capture options"
+description: "Output parameters and capture options"
 category: docs
 order: 2
 date: 2018-12-20 21:08:53
