--- a/docs/_posts/2018-12-20-gestures.md
+++ b/docs/_posts/2018-12-20-gestures.md
@@ -2,6 +2,7 @@
 layout: page
 title: "Gestures"
 subtitle: "Gestures control"
+description: "Gestures control"
 category: docs
 order: 4
 date: 2018-12-20 20:49:35
