--- a/docs/_posts/2018-12-20-install.md
+++ b/docs/_posts/2018-12-20-install.md
@@ -2,6 +2,7 @@
 layout: page
 title: "Install"
 subtitle: "Integrate in your project"
+description: "Integrate in your project"
 category: about
 order: 1
 date: 2018-12-20 17:47:32
