--- a/docs/_posts/2018-12-20-previews.md
+++ b/docs/_posts/2018-12-20-previews.md
@@ -2,6 +2,7 @@
 layout: page
 title: "Previews"
 subtitle: "Camera preview implementations"
+description: "Camera preview implementations"
 category: docs
 order: 6
 date: 2018-12-20 21:58:16
