Fix README links

--- a/docs/_posts/2018-12-21-donate.md
+++ b/docs/_posts/2018-12-21-donate.md
@@ -6,13 +6,13 @@ date: 2018-12-21 13:51:39
 order: 3
 ---
 
-If you like the project, use it with profit, or simply want to thank back, you can consider donating
-to the project through [Open Collective](https://opencollective.com/cameraview/donate). You can either
-make a one time donation or become a sponsor, in which case your company logo will show up here
+If you like the project, use it with profit, or simply want to thank back, please consider donating
+to the project through [Open Collective](https://opencollective.com/cameraview/donate)! You can either
+make a one time donation or become a sponsor, in which case your company logo will immediately show up here
 and in the project main page.
 
-We are grateful for any contribution in this sense, as it gives us motivation to push the library forward and is
-a nice reward for what has been done until now.
+Thank you for any contribution - it is a nice reward for what has been done until now, and a 
+motivation boost to push the library forward.
 
 ## Backers
 
