Create AutoFocusMarker and DefaultAutoFocusMarker

--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -155,17 +155,17 @@ The last two actions will trigger the focus callbacks:
 cameraView.addCameraListener(new CameraListener() {
     
     @Override
-    public void onFocusStart(@NonNull PointF point) {
+    public void onAutoFocusStart(@NonNull PointF point) {
         // Auto focus was started by a gesture or by startAutoFocus(float, float).
         // The camera is currently trying to focus around that area.
         // This can be used to draw things on screen.
     }
 
     @Override
-    public void onFocusEnd(boolean successful, @NonNull PointF point) {
+    public void onAutoFocusEnd(boolean successful, @NonNull PointF point) {
         // Auto focus operation just ended. If successful, the camera will have converged
         // to a new focus point, and possibly changed exposure and white balance as well.
-        // The point is the same that was passed to onFocusStart.
+        // The point is the same that was passed to onAutoFocusStart.
     }
 });
 ```
