--- a/docs/_posts/2018-12-20-previews.md
+++ b/docs/_posts/2018-12-20-previews.md
@@ -64,4 +64,6 @@ The engine method should only be called when the `CameraView` is closed. Otherwi
 |Method|Description|
 |------|-----------|
 |`setPreview(Preview)`|Sets the preview implementation.|
+|`getPreview()`|Gets the current preview implementation.|
 |`setEngine(Engine)`|Sets the engine implementation.|
+|`getEngine()`|Gets the current engine implementation.|
