--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -14,7 +14,8 @@ quality of the output.
 
 Everything can be controlled through XML parameters or programmatically. For convenience, most options
 are represented by `enum` classes extending the `Control` class. This makes it possible to use 
-`CameraView.set(Control)` to set the given control, or `CameraOptions.supports(Control)` to see if it is supported.
+`CameraView.set(Control)` to set the given control, `CameraView.get(Class<Control>)` to get it,
+or `CameraOptions.supports(Control)` to see if it is supported.
 
 ### XML Attributes
 
