Add Audio.MONO and Audio.STEREO

--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -25,7 +25,7 @@ or `CameraOptions.supports(Control)` to see if it is supported.
     app:cameraFlash="off|on|auto|torch"
     app:cameraWhiteBalance="auto|incandescent|fluorescent|daylight|cloudy"
     app:cameraHdr="off|on"
-    app:cameraAudio="on|off"
+    app:cameraAudio="on|off|mono|stereo"
     app:cameraAudioBitRate="0"
     app:cameraVideoCodec="deviceDefault|h263|h264"
     app:cameraVideoMaxSize="0"
@@ -96,7 +96,9 @@ Defaults to `ON`.
 
 ```java
 cameraView.setAudio(Audio.OFF);
-cameraView.setAudio(Audio.ON);
+cameraView.setAudio(Audio.ON); // on but depends on video config
+cameraView.setAudio(Audio.MONO); // force mono
+cameraView.setAudio(Audio.STEREO); // force stereo
 ```
 
 ##### cameraAudioBitRate
