Improve video encoding (#506)
* Reorder code and add long comments

* Simplify encoders Config

* Fix Audio recording bugs

* Anticipate max length detection

* Anticipate even more

* Estimate video bit rate instead of ugly default

* Fix bugs, better logs and comments

* Fix long standing sync bug

* Make inner classes public

* Remove performance logging code

* Add Audio.MONO and Audio.STEREO

* Add mono and stereo in attrs

* Write zeros when we have gaps

* Improve comments

* Add performance flags

* Move configs to separate classes

* Fix stereo bug

* Add onVideoRecordingEnd

* Add changelog notes

* Address some TODOs

* Refactor tests, add PoolTest

--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -25,7 +25,7 @@ or `CameraOptions.supports(Control)` to see if it is supported.
     app:cameraFlash="off|on|auto|torch"
     app:cameraWhiteBalance="auto|incandescent|fluorescent|daylight|cloudy"
     app:cameraHdr="off|on"
-    app:cameraAudio="on|off"
+    app:cameraAudio="on|off|mono|stereo"
     app:cameraAudioBitRate="0"
     app:cameraVideoCodec="deviceDefault|h263|h264"
     app:cameraVideoMaxSize="0"
@@ -96,7 +96,9 @@ Defaults to `ON`.
 
 ```java
 cameraView.setAudio(Audio.OFF);
-cameraView.setAudio(Audio.ON);
+cameraView.setAudio(Audio.ON); // on but depends on video config
+cameraView.setAudio(Audio.MONO); // force mono
+cameraView.setAudio(Audio.STEREO); // force stereo
 ```
 
 ##### cameraAudioBitRate
@@ -141,7 +143,7 @@ cameraView.setVideoBitRate(0);
 cameraView.setVideoBitRate(4000000);
 ```
 
-### Manual Focus
+### Auto Focus
 
 There are many ways to focus a CameraView engine:
 
@@ -172,6 +174,44 @@ cameraView.addCameraListener(new CameraListener() {
 ```
 
 Auto focus is not guaranteed to be supported: check the `CameraOptions` to be sure.
+
+```xml
+<com.otaliastudios.cameraview.CameraView
+    app:cameraAutoFocusMarker="@string/cameraview_default_autofocus_marker"
+    app:cameraAutoFocusResetDelay="3000"/>
+```
+
+##### cameraAutoFocusMarker
+
+Lets you set a marker for drawing on screen in response to auto focus events.
+In XML, you should pass the qualified class name of your marker.
+
+```java
+cameraView.setAutoFocusMarker(null);
+cameraView.setAutoFocusMarker(marker);
+```
+
+We offer a default marker (similar to the old `focusWithMarker` attribute in v1),
+which you can set in XML using the `@string/cameraview_default_autofocus_marker` resource,
+or programmatically:
+
+```java
+cameraView.setAutoFocusMarker(new DefaultAutoFocusMarker());
+```
+
+##### cameraAutoFocusResetDelay
+
+Lets you control how an auto-focus operation is reset after completed.
+Setting a value <= 0 or == Long.MAX_VALUE will not reset the auto-focus.
+This is useful for low end devices that have slow auto-focus capabilities.
+Defaults to 3 seconds.
+
+```java
+cameraView.setCameraAutoFocusResetDelay(1000);  // 1 second
+cameraView.setCameraAutoFocusResetDelay(0);  // NO reset
+cameraView.setCameraAutoFocusResetDelay(-1);  // NO reset
+cameraView.setCameraAutoFocusResetDelay(Long.MAX_VALUE);  // NO reset
+```
 
 ### Zoom
 
