--- a/docs/_posts/2018-12-20-install.md
+++ b/docs/_posts/2018-12-20-install.md
@@ -24,7 +24,7 @@ allprojects {
 Then simply download the latest version:
 
 ```groovy
-api 'com.otaliastudios:cameraview:2.0.0-rc2'
+api 'com.otaliastudios:cameraview:2.0.0'
 ```
 
 No other configuration steps are needed.
