Add FILTER_CONTROL_1 and FILTER_CONTROL_2 to control filters with gestures

--- a/docs/_posts/2019-08-06-filters.md
+++ b/docs/_posts/2019-08-06-filters.md
@@ -70,7 +70,9 @@ filter that was previously set and return back to normal.
 |`TintFilter`|`Filters.TINT`|`@string/cameraview_filter_tint`|
 |`VignetteFilter`|`Filters.VIGNETTE`|`@string/cameraview_filter_vignette`|
 
-Most of these filters accept input parameters to tune them. For example, `DuotoneFilter` will
+### Filters controls
+
+Most of the provided filters accept input parameters to tune them. For example, `DuotoneFilter` will
 accept two colors to apply the duotone effect.
 
 ```java
@@ -80,6 +82,14 @@ duotoneFilter.setSecondColor(Color.GREEN);
 
 You can change these values by acting on the filter object, before or after passing it to `CameraView`.
 Whenever something is changed, the updated values will be visible immediately in the next frame.
+
+You can also map the first or second filter control to a gesture (like horizontal or vertical scrolling),
+as explained in [the gesture documentation](gestures.html):
+
+```java
+camera.mapGesture(Gesture.SCROLL_HORIZONTAL, GestureAction.FILTER_CONTROL_1);
+camera.mapGesture(Gesture.SCROLL_VERTICAL, GestureAction.FILTER_CONTROL_2);
+```
 
 ### Advanced usage
 
