--- a/docs/_posts/2018-12-20-gestures.md
+++ b/docs/_posts/2018-12-20-gestures.md
@@ -26,21 +26,35 @@ Simple as that. There are two things to be noted:
 
 |Gesture|Description|Can be mapped to|
 |-------------|-----------|----------------|
-|`PINCH`|Pinch gesture, typically assigned to the zoom control.|`zoom` `exposureCorrection` `none`|
-|`TAP`|Single tap gesture, typically assigned to the focus control.|`autoFocus` `takePicture` `none`|
-|`LONG_TAP`|Long tap gesture.|`autoFocus` `takePicture` `none`|
-|`SCROLL_HORIZONTAL`|Horizontal movement gesture.|`zoom` `exposureCorrection` `none`|
-|`SCROLL_VERTICAL`|Vertical movement gesture.|`zoom` `exposureCorrection` `none`|
+|`PINCH`|Pinch gesture, typically assigned to the zoom control.|`ZOOM` `EXPOSURE_CORRECTION` `FILTER_CONTROL_1` `FILTER_CONTROL_2` `NONE`|
+|`TAP`|Single tap gesture, typically assigned to the focus control.|`AUTO_FOCUS` `TAKE_PICTURE` `NONE`|
+|`LONG_TAP`|Long tap gesture.|`AUTO_FOCUS` `TAKE_PICTURE` `NONE`|
+|`SCROLL_HORIZONTAL`|Horizontal movement gesture.|`ZOOM` `EXPOSURE_CORRECTION` `FILTER_CONTROL_1` `FILTER_CONTROL_2` `NONE`|
+|`SCROLL_VERTICAL`|Vertical movement gesture.|`ZOOM` `EXPOSURE_CORRECTION` `FILTER_CONTROL_1` `FILTER_CONTROL_2` `NONE`|
+
+### Gesture Actions
+
+Looking at this from the other side:
+
+|Gesture action|Description|Can be mapped to|
+|--------------|-----------|----------------|
+|`NONE`|Disables this gesture.|`TAP` `LONG_TAP` `PINCH` `SCROLL_HORIZONTAL` `SCROLL_VERTICAL`|
+|`AUTO_FOCUS`|Launches an [auto-focus operation](controls.html#auto-focus) on the finger position.|`TAP` `LONG_TAP`|
+|`TAKE_PICTURE`|Takes a picture using [takePicture](capturing-media.html).|`TAP` `LONG_TAP`|
+|`ZOOM`|[Zooms](controls.html#zoom) in or out.|`PINCH` `SCROLL_HORIZONTAL` `SCROLL_VERTICAL`|
+|`EXPOSURE_CORRECTION`|Controls the [exposure correction](controls.html#exposure-correction).|`PINCH` `SCROLL_HORIZONTAL` `SCROLL_VERTICAL`|
+|`FILTER_CONTROL_1`|Controls the first parameter (if any) of a [real-time filter](filters.html).|`PINCH` `SCROLL_HORIZONTAL` `SCROLL_VERTICAL`|
+|`FILTER_CONTROL_2`|Controls the second parameter (if any) of a [real-time filter](filters.html).|`PINCH` `SCROLL_HORIZONTAL` `SCROLL_VERTICAL`|
 
 ### XML Attributes
 
 ```xml
 <com.otaliastudios.cameraview.CameraView
-    app:cameraGesturePinch="zoom|exposureCorrection|none"
+    app:cameraGesturePinch="zoom|exposureCorrection|filterControl1|filterControl2|none"
     app:cameraGestureTap="autoFocus|takePicture|none"
     app:cameraGestureLongTap="autoFocus|takePicture|none"
-    app:cameraGestureScrollHorizontal="zoom|exposureCorrection|none"
-    app:cameraGestureScrollVertical="zoom|exposureCorrection|none"/>
+    app:cameraGestureScrollHorizontal="zoom|exposureCorrection|filterControl1|filterControl2|none"
+    app:cameraGestureScrollVertical="zoom|exposureCorrection|filterControl1|filterControl2|none"/>
 ```
 
 ### Related APIs
