--- a/docs/_posts/2019-08-06-filters.md
+++ b/docs/_posts/2019-08-06-filters.md
@@ -96,6 +96,17 @@ camera.mapGesture(Gesture.SCROLL_VERTICAL, GestureAction.FILTER_CONTROL_2);
 Advanced users with OpenGL experience can create their own filters by implementing the `Filter` interface
 and passing in a fragment shader and a vertex shader that will be used for drawing.
 
+#### Simple filters
+
+For very simple filters that have a static fragment shader, you can create a working filter
+implementation by simply creating an instance of `SimpleFilter`:
+
+```java
+Filter filter = new SimpleFilter(myFragmentShader);
+```
+
+#### More complex filters
+
 We recommend:
 
 - Subclassing `BaseFilter` instead of implementing `Filter`, since that takes care of most of the work
