--- a/docs/_posts/2019-08-06-filters.md
+++ b/docs/_posts/2019-08-06-filters.md
@@ -91,6 +91,27 @@ camera.mapGesture(Gesture.SCROLL_HORIZONTAL, GestureAction.FILTER_CONTROL_1);
 camera.mapGesture(Gesture.SCROLL_VERTICAL, GestureAction.FILTER_CONTROL_2);
 ```
 
+### MultiFilter
+
+CameraView provides a special filter called `MultiFilter` which can be used to group different filters
+together, and apply them in sequence to the input frame, in order to process it more than once.
+
+```java
+camera.setFilter(new MultiFilter(firstFilter, secondFilter, thirdFilter));
+```
+
+You can even add new filters to the group at any time, using `MultiFilter.addFilter()`.
+The `MultiFilter` will also try to dispatch [filter controls](#filters-controls) (e.g. from gestures) 
+to its children.
+
+There are some technical caveats when using a `MultiFilter`:
+
+- Using a large number of child filters can consume the available graphic memory
+- For [advanced users](#advanced-usage), child filters need to read from `GLES20.GL_TEXTURE_2D`
+  instead of the typical `GLES11Ext.GL_TEXTURE_EXTERNAL_OES`. To achieve this, we get your fragment 
+  shader String and replace any `"samplerExternalOES"` with `"sampler2D"`. This is a hack
+  that might cause issues with specific shader implementations.
+
 ### Advanced usage
 
 Advanced users with OpenGL experience can create their own filters by implementing the `Filter` interface
