Add doc empty page

--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -253,7 +253,7 @@ cameraView.addCameraListener(new CameraListener() {
     @UiThread
     public void onExposureCorrectionChanged(float newValue, @NonNull float[] bounds, @Nullable PointF[] fingers) {
         // newValue: the new correction value
-        // bounds: min and max bounds for newValue, as returned by {@link CameraOptions}
+        // bounds: min and max bounds for newValue, as returned by CameraOptions
         // fingers: finger positions that caused the event, null if not caused by touch
     }
 });
