Fix website links

--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -195,7 +195,7 @@ float max = options.getPreviewFrameRateMaxValue();
 
 There are two ways to control the zoom value:
 
-- User can zoom in or out with a [Gesture](gestures.html)
+- User can zoom in or out with a [Gesture](gestures)
 - The developer can start manual zoom with the `setZoom(float)` API, passing in a value between 0 and 1.
 
 Both actions will trigger the zoom callback, which can be used, for example, to draw a seek bar:
