--- a/docs/_posts/2018-12-20-previews.md
+++ b/docs/_posts/2018-12-20-previews.md
@@ -39,7 +39,7 @@ to use all the features available. However, experienced user might prefer a diff
 |-------|---------|----|
 |`Preview.SURFACE`|A `SurfaceView`|Can be good for battery, but will not work well with dynamic layout changes and similar things. No support for video snapshots.|
 |`Preview.TEXTURE`|A `TextureView`|Better. Requires hardware acceleration. No support for video snapshots.|
-|`Preview.GL_SURFACE`|A `GLSurfaceView`|Recommended. Supports video snapshots. Supports [overlays](watermarks-and-overlays.html). Supports [real-time filters](filters.html).|
+|`Preview.GL_SURFACE`|A `GLSurfaceView`|Recommended. Supports video snapshots. Supports [overlays](watermarks-and-overlays). Supports [real-time filters](filters).|
 
 The GL surface, as an extra benefit, has a much more efficient way of capturing picture snapshots,
 that avoids OOM errors, rotating the image on the fly, reading EXIF, and other horrible things belonging to v1.
