--- a/docs/_posts/2019-08-06-filters.md
+++ b/docs/_posts/2019-08-06-filters.md
@@ -10,8 +10,8 @@ disqus: 1
 ---
 
 Starting from version `2.1.0`, CameraView experimentally supports real-time filters that can modify
-the camera frames before they are shown and recorded. Just like [overlays](watermarks-and-overlays.html),
-these filters are applied to the preview and to any [picture or video snapshots](capturing-media.html).
+the camera frames before they are shown and recorded. Just like [overlays](watermarks-and-overlays),
+these filters are applied to the preview and to any [picture or video snapshots](capturing-media).
 
 Starting from `2.5.0`, this feature is considered to be stable and you do not need the experimental 
 flag to use it. The only condition is to use the `Preview.GL_SURFACE` preview.
@@ -82,7 +82,7 @@ You can change these values by acting on the filter object, before or after pass
 Whenever something is changed, the updated values will be visible immediately in the next frame.
 
 You can also map the first or second filter control to a gesture (like horizontal or vertical scrolling),
-as explained in [the gesture documentation](gestures.html):
+as explained in [the gesture documentation](gestures):
 
 ```java
 camera.mapGesture(Gesture.SCROLL_HORIZONTAL, GestureAction.FILTER_CONTROL_1);
