--- a/docs/_posts/2019-09-04-metering.md
+++ b/docs/_posts/2019-09-04-metering.md
@@ -14,9 +14,8 @@ distance in order to automatically adapt the camera exposure, focus and white ba
 often referred as 3A).
 
 We treat three different types on metering: [continuous metering](#continuous-metering), 
-[picture metering](#picture-metering) and [touch metering](#touch-metering).
-
-You can also apply adjustment to the metered exposure through the [exposure correction](#exposure-correction) control.
+[picture metering](#picture-metering) and [touch metering](#touch-metering). You can also apply
+adjustment to the metered exposure through the [exposure correction](#exposure-correction) control.
 
 ### Continuous Metering
 
@@ -25,7 +24,7 @@ as the device moves or the scene changes.
 
 - For AE, this is always enabled if supported
 - For AF, this is always enabled if supported
-- For AWB, this is enabled if the `WhiteBalance` parameter is set to `AUTO` [[docs]](#controls.html#camerawhitebalance)
+- For AWB, this is enabled if the `WhiteBalance` parameter is set to `AUTO` [[docs]](controls#camerawhitebalance)
 
 ### Picture Metering
 
@@ -51,7 +50,7 @@ cameraView.setPictureSnapshotMetering(false); // Don't
 
 ### Touch Metering
 
-Touch metering is triggered by either a [Gesture](gestures.html) or by the developer itself, which
+Touch metering is triggered by either a [Gesture](gestures) or by the developer itself, which
 can start touch metering on a specific point with the `startAutoFocus(float, float)` API.
 This action needs the coordinates of a point computed with respect to the view width and height.
 
@@ -114,7 +113,7 @@ cameraView.setCameraAutoFocusResetDelay(Long.MAX_VALUE);  // NO reset
 
 There are two ways to control the exposure correction value:
 
-- User can change the exposure correction with a [Gesture](gestures.html)
+- User can change the exposure correction with a [Gesture](gestures)
 - The developer can change this value with the `setExposureCorrection(float)` API, passing in the EV
   value, in camera stops. This value should be contained in the minimum and maximum supported values,
   as returned by `CameraOptions`.
