--- a/docs/_posts/2019-09-04-metering.md
+++ b/docs/_posts/2019-09-04-metering.md
@@ -51,8 +51,16 @@ cameraView.setPictureSnapshotMetering(false); // Don't
 ### Touch Metering
 
 Touch metering is triggered by either a [Gesture](gestures) or by the developer itself, which
-can start touch metering on a specific point with the `startAutoFocus(float, float)` API.
-This action needs the coordinates of a point computed with respect to the view width and height.
+can start touch metering on a specific point with the `startAutoFocus()` API.
+This action needs the coordinates of a point or region computed with respect to the view width and height.
+
+```java
+// Start touch metering at the center:
+cameraView.startAutoFocus(cameraView.getWidth() / 2F, cameraView.getHeight/() / 2F);
+// Start touch metering within a given area,
+// like the bounding box of a face.
+ cameraView.startAutoFocus(rect);
+```
 
 In both cases, the metering callbacks will be triggered:
 
@@ -151,6 +159,7 @@ EV correction is not guaranteed to be supported: check the `CameraOptions` to be
 |`setPictureMetering(boolean)`|Whether the engine should trigger 3A metering when a picture is requested. Defaults to true.|
 |`setPictureSnapshotMetering(boolean)`|Whether the engine should trigger 3A metering when a picture snapshot is requested. Defaults to false.|
 |`startAutoFocus(float, float)`|Starts the 3A touch metering routine at the given coordinates, with respect to the view system.|
+|`startAutoFocus(RectF)`|Starts the 3A touch metering routine for the given area, defined with respect to the view system.|
 |`CameraOptions.isAutoFocusSupported()`|Whether touch metering (metering with respect to a specific region of the screen) is supported.|
 |`setExposureCorrection(float)`|Changes the exposure adjustment, in EV stops. A positive value means a brighter picture.|
 |`CameraOptions.getExposureCorrectionMinValue()`|The minimum value of negative exposure correction, in EV stops.|
