--- a/docs/_posts/2018-12-20-controls.md
+++ b/docs/_posts/2018-12-20-controls.md
@@ -1,8 +1,7 @@
 ---
 layout: page
 title: "Controls"
-subtitle: "Output parameters and capture options"
-description: "Output parameters and capture options"
+description: "Configuring output parameters and capture options"
 category: docs
 order: 2
 date: 2018-12-20 21:08:53
@@ -41,7 +40,6 @@ or `CameraOptions.supports(Control)` to see if it is supported.
 
 Which camera to use, either back facing or front facing.
 Defaults to the first available value (tries `BACK` first).
-
 The available values are exposed through the `CameraOptions` object.
 
 ```java
@@ -52,7 +50,6 @@ cameraView.setFacing(Facing.FRONT);
 ##### cameraFlash
 
 Flash mode, either off, on, auto or torch. Defaults to `OFF`.
-
 The available values are exposed through the `CameraOptions` object.
 
 ```java
@@ -66,7 +63,6 @@ cameraView.setFlash(Flash.TORCH);
 
 Sets the encoder for video recordings. Defaults to `DEVICE_DEFAULT`,
 which should typically be H_264.
-
 The available values are exposed through the `CameraOptions` object.
 
 ```java
@@ -79,7 +75,6 @@ cameraView.setVideoCodec(VideoCodec.H_264);
 
 Sets the desired white balance for the current session.
 Defaults to `AUTO`.
-
 The available values are exposed through the `CameraOptions` object.
 
 ```java
@@ -93,7 +88,6 @@ cameraView.setWhiteBalance(WhiteBalance.CLOUDY);
 ##### cameraHdr
 
 Turns on or off HDR captures. Defaults to `OFF`.
-
 The available values are exposed through the `CameraOptions` object.
 
 ```java
@@ -106,7 +100,6 @@ cameraView.setHdr(Hdr.ON);
 The format for pictures taken with `takePicture()`. Does not apply to picture snapshots taken
 with `takePictureSnapshot()`. The `JPEG` value is always supported, while for other values
 support might change depending on the engine and the device sensor.
-     
 The available values are exposed through the `CameraOptions` object.
 
 ```java
@@ -118,7 +111,6 @@ cameraView.setPictureFormat(PictureFormat.DNG);
 
 Turns on or off audio stream while recording videos.
 Defaults to `ON`.
-
 The available values are exposed through the `CameraOptions` object.
 
 ```java
@@ -183,7 +175,6 @@ cameraView.setPreviewFrameRate(0F);
 The preview frame rate is an important parameter because it will also
 control (broadly) the rate at which frame processor frames are dispatched, 
 the video snapshots frame rate, and the rate at which real-time filters are invoked.
-
 The available values are exposed through the `CameraOptions` object:
 
 ```java
