--- a/docs/_posts/2018-12-20-install.md
+++ b/docs/_posts/2018-12-20-install.md
@@ -1,7 +1,6 @@
 ---
 layout: page
 title: "Install"
-subtitle: "Integrate in your project"
 description: "Integrate in your project"
 category: about
 order: 1
@@ -24,7 +23,7 @@ allprojects {
 Then simply download the latest version:
 
 ```groovy
-api 'com.otaliastudios:cameraview:2.6.0'
+api 'com.otaliastudios:cameraview:{{ site.github_version }}'
 ```
 
 No other configuration steps are needed.
