--- a/docs/_posts/2019-08-06-filters.md
+++ b/docs/_posts/2019-08-06-filters.md
@@ -1,7 +1,6 @@
 ---
 layout: page
 title: "Real-time Filters"
-subtitle: "Apply filters to preview and snapshots"
 description: "Apply filters to preview and snapshots"
 category: docs
 order: 12
@@ -37,8 +36,8 @@ cameraView.setFilter(Filters.SEPIA.newInstance());
 ```
 
 All of the filters stored in the `Filters` class have an XML string resource that you can use
-to quickly setup the camera view. For example, `Filters.BLACK_AND_WHITE` can be set by using
-`app:cameraFilter="@string/cameraview_filter_black_and_white`.
+to quickly setup the camera view. For example, `Filters.BLACK_AND_WHITE` can be used by setting
+`app:cameraFilter` to `"@string/cameraview_filter_black_and_white"`.
 
 The default filter is called `NoFilter` (`Filters.NONE`) and can be used to clear up any other
 filter that was previously set and return back to normal.
@@ -115,7 +114,7 @@ There are some technical caveats when using a `MultiFilter`:
 Advanced users with OpenGL experience can create their own filters by implementing the `Filter` interface
 and passing in a fragment shader and a vertex shader that will be used for drawing.
 
-#### Simple filters
+##### Simple filters
 
 For very simple filters that have a static fragment shader, you can create a working filter
 implementation by simply creating an instance of `SimpleFilter`:
@@ -124,7 +123,7 @@ implementation by simply creating an instance of `SimpleFilter`:
 Filter filter = new SimpleFilter(myFragmentShader);
 ```
 
-#### More complex filters
+##### More complex filters
 
 We recommend:
 
