--- a/docs/_posts/2019-09-04-metering.md
+++ b/docs/_posts/2019-09-04-metering.md
@@ -1,7 +1,6 @@
 ---
 layout: page
 title: "Metering"
-subtitle: "Exposure and metering controls"
 description: "Exposure and metering controls"
 category: docs
 order: 4
@@ -28,8 +27,8 @@ as the device moves or the scene changes.
 
 ### Picture Metering
 
-*In Camera1, picture metering is always enabled for pictures, and always disabled for picture snapshots. 
-The following applies to Camera2 only.*
+> In Camera1, picture metering is always enabled for pictures, and always disabled for picture snapshots. 
+The following applies to Camera2 only.
 
 The camera engine will try to trigger metering when a picture is requested, either with `takePicture()`
 or `takePictureSnapshot()`. This has two obvious consequences:
@@ -106,7 +105,7 @@ cameraView.setAutoFocusMarker(new DefaultAutoFocusMarker());
 ##### Touch Metering Reset Delay
 
 You control control how a touch metering operation is reset after completed.
-Setting a value <= 0 or == Long.MAX_VALUE will not reset the metering values.
+Setting a negative value (or 0, or `Long.MAX_VALUE`) will not reset the metering values.
 This is useful for low end devices that have slow auto-focus capabilities.
 Defaults to 3 seconds.
 
