--- a/docs/_posts/2018-12-21-donate.md
+++ b/docs/_posts/2018-12-21-donate.md
@@ -17,13 +17,13 @@ according to the GitHub Sponsors tier you choose and the Open Collective rules.
 
 Thank you for any contribution!
 
-## Project Backers
+### Project Backers
 
 Thanks to all the project backers! [Become a backer.](https://opencollective.com/cameraview#backer)
 
 <a href="https://opencollective.com/cameraview#backers" target="_blank"><img src="https://opencollective.com/cameraview/backers.svg?width=890"></a>
 
-## Project Sponsors
+### Project Sponsors
 
 Thanks to all the project sponsors! [Become a sponsor](https://opencollective.com/cameraview#sponsor) and have your logo here.
 
