--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CameraView</string>
+    <string name="album_name" translatable="false">CameraView Album</string>
 </resources>
